<resources>
    <string name="app_name">L12-My Singapore</string>
    <string name="name">Island Name</string>
    <string name="hint_name">Enter Island Name here</string>
    <string name="desc">Description</string>
    <string name="hint_desc">Enter Islands\' name here</string>
    <string name="area">Square Km</string>
    <string name="hint_area">Enter area</string>
    <string name="stars">Stars</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>

    <string name="title_activity_main">Island List</string>


    <string name="id">Island ID</string>
    <string name="btnShowList">Show List</string>
    <string name="btnInsert">Insert new islands</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="btn5Stars">Show all islands with 5 stars</string>


</resources>